test/files/neg/t6227.scala
object Test {
  implicit case class IntOps( i: Int ) {
    def twice = i * 2
  }
}

