test/files/neg/t6227.check
t6227.scala:2: error: illegal combination of modifiers: implicit and case for: class IntOps
  implicit case class IntOps( i: Int ) {
                      ^
one error found
